--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -863,9 +863,7 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <ul>
 <li>K-means Clustering</li>
 </ul>
-<!--
-
-Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>) -->
+<p>Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>)</p>
 
           </div>
 
