--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -864,6 +864,17 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <li>K-means Clustering</li>
 </ul>
 <p>Day 25 Slides (<a href="/stat220/Day25.pdf" target="_blank">pdf</a>/<a href="/stat220/Day25.html" target="_blank">html</a>)</p>
+<p><span style="color:orange"><strong>Friday, 11/11</strong></span></p>
+<h3 id="before-class-2">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Skim through <a href="https://emilhvitfeldt.github.io/ISLR-tidymodels-labs/tree-based-methods.html" target="_blank" rel="noopener">tree-based methods</a> from ISLR labs. We will gently go over classification trees and random forest models only.
+  </div>
+</div>
+<h3 id="in-class-2">In Class</h3>
+<ul>
+<li>Basic decision tree and random forest</li>
+</ul>
 
           </div>
 
