--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -875,6 +875,7 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <ul>
 <li>Basic decision tree and random forest</li>
 </ul>
+<p>Day 26 Slides (<a href="/stat220/Day26.pdf" target="_blank">pdf</a>/<a href="/stat220/Day26.html" target="_blank">html</a>)</p>
 
           </div>
 
