--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -769,6 +769,10 @@ Continue reading GW Chapter 3, GW Chapter 28, and Irizarry Chapter 10 In Class C
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
