--- a/public/courses/stat220/week7/index.html
+++ b/public/courses/stat220/week7/index.html
@@ -767,6 +767,10 @@ Before Class Watch through a simple video on building a Shiny App below It would
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
