--- a/public/courses/stat220/week9/index.html
+++ b/public/courses/stat220/week9/index.html
@@ -767,6 +767,10 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
@@ -868,7 +872,7 @@ Before Class Continue reading section 6.3-6.7 of Data Science: A First Introduct
 <h3 id="before-class-2">Before Class</h3>
 <div class="alert alert-note">
   <div>
-    Skim through <a href="https://emilhvitfeldt.github.io/ISLR-tidymodels-labs/tree-based-methods.html" target="_blank" rel="noopener">tree-based methods</a> from ISLR labs. We will gently go over classification trees and random forest models only.
+    Skim through <a href="https://emilhvitfeldt.github.io/ISLR-tidymodels-labs/08-tree-based-methods.html" target="_blank" rel="noopener">tree-based methods</a> from ISLR labs. We will gently go over classification trees and random forest models only.
   </div>
 </div>
 <h3 id="in-class-2">In Class</h3>
