--- a/public/courses/stat220/cheatsheets/index.html
+++ b/public/courses/stat220/cheatsheets/index.html
@@ -781,6 +781,10 @@ leaflet Cheatsheet" /><meta property="og:image" content="https://deepbas.netlify
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
