--- a/public/courses/stat220/homework-in-stat-220/index.html
+++ b/public/courses/stat220/homework-in-stat-220/index.html
@@ -768,6 +768,10 @@
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
