--- a/public/courses/stat220/week6/index.html
+++ b/public/courses/stat220/week6/index.html
@@ -769,6 +769,10 @@ Before Class Please read Irizarry Chapter 24 on web scraping. Also, it may be us
 
 
 
+  <li class=""><a href="/courses/stat220/week10/">My Quiz</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/pat/">Cache credentials for RStudio and GitHub</a></li>
 
       
