--- a/static/stat220/Day22.html
+++ b/static/stat220/Day22.html
@@ -46,7 +46,7 @@ class: title-slide, middle
 
 ### .fancy[Fall 2022]
 
- November 02 2022
+ December 31 2022
 
 
 ---
@@ -84,7 +84,7 @@ Predicting what category a (future) observation falls into
 
 ---
 
-background-image: url(images/forest_fire.jpg)
+background-image: url(images/forest_fire.png)
 background-position: center
 background-size: cover
 
@@ -320,14 +320,10 @@ class: middle
 # .purple[Visualizing the decision boundary]
 
 .font100.fancy.bq[
-
-- We can map out the region in feature-space where the classifier would predict 'fire', and the kinds where it would predict 'not fire'
-
-- There is some boundary between the two, where points on one side of
-the boundary will be classified 'fire' and points on the other side will be
-classified 'not fire'
-
-- This boundary is called **decision boundary**
+- There is a feature-space region for classifying 'fire'
+- There is a feature-space region for classifying 'not fire'
+- There is a boundary between the two regions 
+- This boundary is referred to as the **decision boundary**
 ]
 
 ---
@@ -394,7 +390,7 @@ head(fire_raw)
 
 
 
-background-image: url("images/recipe.jpg")
+background-image: url("images/recipe.png")
 background-position: center
 background-size: cover
 class: left
@@ -574,7 +570,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_7a5b53be" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0305322f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
