--- a/static/stat120/Day2.html
+++ b/static/stat120/Day2.html
@@ -52,14 +52,16 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- March 30 2022
+ January 06 2023
 
 ---
+
+class: middle
 
 # Sampling and Inference
 
 .pull-left[
-.blockquote[
+.bq[
 - A .bold[population] includes all
 individuals or objects of
 interest.
@@ -82,6 +84,8 @@ about the population.
 
 ---
 
+class: middle
+
 # MN Department of Natural Resources
 
 .pull-left[
@@ -91,7 +95,7 @@ about the population.
 &lt;/center&gt;
 ]
 .pull-right[
-.blockquote[
+.bq[
 - .bold[Population:] all plots (grid
 cells) on the map
 - .bold[Sample:] the cross-hatched
@@ -108,7 +112,7 @@ population
 
 # Sampling Bias
 
-.blockquote[
+.bq[
 - Sampling bias occurs when the method of selecting a sample
 causes the sample to differ from the population in some
 relevant way
@@ -121,16 +125,16 @@ sample to the population
 
 &lt;br&gt;
 
-&lt;center&gt;
-&lt;a style="background-color:Orange;font-size:28px"&gt; To eliminate sampling bias always take a RANDOM SAMPLE! &lt;/a&gt;
-&lt;/center&gt;
 
+.green-h.center[To eliminate sampling bias always take a RANDOM SAMPLE!]
 
 ---
 
+class: middle
+
 # Lincoln’s Gettysburg Address
 
-.font85[
+.font75[
 ```
 “Four score and seven years ago our fathers brought forth, on this continent, a new
 nation, conceived in Liberty, and dedicated to the proposition that all men are created
@@ -155,18 +159,14 @@ perish from the earth.
 
 ---
 
-# Lincoln's Gettysberg Address
-
-.bold[Question:] What is the average word length?
-
---
+# Lincoln's Gettysberg Address: What is the average word length?
 
 .bold[Task:] Select a sample of 10 words to estimate average word length of
 entire address
 
 --
 
-.blockquote[
+.bq[
 - Population? (describe cases of interest)
 - Sample?
 - pick your sample….
@@ -180,27 +180,33 @@ entire address
 &lt;br&gt;
 
 &lt;center&gt;
-&lt;a style="background-color:Tomato;font-size:28px"&gt; Actual average is 4.29 letters &lt;/a&gt;
-&lt;/center&gt;
+&lt;a style="background-color:#000000;color:#FFFFFF;font-size:30px"&gt; Actual average is 4.29 letters &lt;/a&gt;&lt;/center&gt;
 
 ---
 class: action, middle
 
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;1&lt;/i&gt;    
+# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Work&amp;nbsp;1&lt;/i&gt;    
 
 
 .pull-left-40[
 ![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
 ]
 .pull-right-60[
-.blockquote[
+&lt;br&gt;
+&lt;br&gt;
+.bq[
 
-- Go to this [google form](https://forms.gle/vQLqhXcsFWX5ieRh9)
+- Go to the appropriate forms:
+
+  - [google form section 02](https://forms.gle/seQnFSXF2g3fp1YK8)
+  - [google form section 04](https://forms.gle/JA9fULW5M37XHvEVA)
+
 - Find the average word length and enter your answer
 ]
 ]
 
-<div class="countdown" id="timer_6244781c" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_67dd1921" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -217,9 +223,9 @@ when collected on humans
 
 class: middle
 
-# Some other forms of bias
+# Some forms of bias
 
-.blockquote[Other forms of bias to watch out for in data collection:
+.bq[Some forms of bias to watch out for in data collection:
 - Question wording
 - Question order
 - Context
@@ -230,7 +236,7 @@ class: middle
 
 # Question wording
 
-.blockquote[A random sample was asked: “Should there be a tax cut, or
+.bq[A random sample was asked: “Should there be a tax cut, or
 should money be used to fund new government programs?”
 
 
@@ -242,7 +248,7 @@ should money be used to fund new government programs?”
 --
 &lt;br&gt;
 
-.blockquote[A different random sample was asked: “Should there be a tax
+.bq[A different random sample was asked: “Should there be a tax
 cut, or should money be spent on programs for education, the
 environment, health care, crime-fighting, and military defense?”
 
@@ -259,35 +265,34 @@ class: middle
 
 &gt; Depending on the order of questions we can see either a greater differences in responses or lesser difference in response. Respondents tend to provide answers consistent with their prior responses.
 
-
----
-
-# Danish Study
-
-&gt; Danish policy makers found out in a [study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688) that order bias exists in Danish Public Services
-
-- When asked about overall satisfaction before being asked about specific services, the overall satisfaction was low.
-
-- When asked about overall satisfaction after being asked about specifc services, then the overall satifaction was high.
-
 ---
 
 class: action
 
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;2&lt;/i&gt;    
+# [Danish study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688): Question order bias
 
-Go over the abstract of this [study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688) and summarize it in the in class activity .Rmd file. 
 
 &lt;center&gt;
-&lt;img src="images/abstract.png" width="60%" height="55%"&gt; &lt;br&gt;
+&lt;img src="images/abstract.png" width="80%" height="55%"&gt; &lt;br&gt;
 &lt;/center&gt;
 
+---
 
-<div class="countdown" id="timer_62447880" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
-</div>
+class: middle
+
+
+# Danish Study
+
+&gt; Danish policy makers found out in the [study](https://onlinelibrary.wiley.com/doi/abs/10.1111/padm.12688) that order bias exists in Danish Public Services
+
+.font90[
+- When asked about overall satisfaction before being asked about specific services, the overall satisfaction was low.
+
+- When asked about overall satisfaction after being asked about specifc services, then the overall satifaction was high.
+]
 
 ---
+
 
 # Context
 
@@ -296,7 +301,7 @@ would you have children?”
 
 --
 
-.blockquote[The first request for data contained a letter from a young couple
+.bq[The first request for data contained a letter from a young couple
 which listed worries about parenting and various reasons not to
 have kids
 
@@ -305,14 +310,15 @@ have kids
 
 &lt;br&gt;
 
-.blockquote[The second request for data was in response to this number, in
+.bq[The second request for data was in response to this number, in
 which Ann wrote how she was “stunned, disturbed, and just
 plain flummoxed”
 
 `$$95\% \text{ said yes}$$`]
 
-
 ---
+
+class: middle
 
 # Non-response Bias
 
@@ -322,26 +328,33 @@ plain flummoxed”
 - There is general unwillingness due to polar opposite opinions
 - The survey did not reach the right respondent
 
-A survey asking teenagers about best cigarette brands
-Spam emails is also a prime reason for non-response bias
+.blue-h[e.g. A survey asking teenagers about best cigarette brands
+Spam emails is also a prime reason for non-response bias]
 
 ---
 
-class: action
+class: action, middle
 
-# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;3&lt;/i&gt;    
-
-&gt; For the remainder of the time, please go over 
-
-- the Gettysburg example again
-
-- CNN poll: Driving with a Pet on your Lap
+# &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Group&amp;nbsp;Work&amp;nbsp;2&lt;/i&gt;    
 
 
-<div class="countdown" id="timer_62447aa0" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+.pull-left-40[
+![](https://media.giphy.com/media/RKApDdwsQ6jkwd6RNn/giphy.gif)
+]
+.pull-right-60[
+&lt;br&gt;
+&lt;br&gt;
+.bq[
+
+- Go over to [moodle](https://moodle.carleton.edu/login/index.php) to get the class activity .Rmd file
+- Continue working with your neighbors and let me know of you have any questions
+]
+]
+
+<div class="countdown" id="timer_0a053aae" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
-
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="libs/remark-latest.min.js"></script>
@@ -392,6 +405,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
