--- a/static/stat120/Day3.html
+++ b/static/stat120/Day3.html
@@ -49,13 +49,13 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- January 02 2023
+ January 09 2023
 
 ---
 
 class: middle
 
-# Explanatory and Response
+# Recap: Explanatory and Response
 
 .bq[
 If we are using one variable to help us understand or predict values
@@ -181,25 +181,19 @@ class: middle
 
 ---
 
+class: middle
 
 # Confounding Variable
 
-.font120[
-&gt; A third variable that is associated with both the explanatory
+.bq.font100[
+A third variable that is associated with both the explanatory
 variable and the response variable is called a .bold[confounding variable]
+- A confounding variable can offer a plausible explanation for an association between the two variables.
 ]
+&lt;br&gt;
 
---
+.blue-h[Whenever confounding variables are present (or may be present), a causal association .bold[CANNOT] be determined!]
 
-.font120[
-&gt; A confounding variable can offer a plausible explanation for an association between the two variables.
-]
-
---
-
-.font120[
-&gt; Whenever confounding variables are present (or may be present), a causal association .bold[CANNOT] be determined!
-]
 
 ---
 
@@ -254,6 +248,8 @@ multiple fish farms to see if the two variables are related.
 
 ---
 
+class: middle
+
 # Observational Studies and Confounding Variable
 
 .bql[
@@ -264,7 +260,6 @@ studies
 causation!!
 ]
 
---
 
 .blue-h[To avoid confounding variables: Randomly assign values of the explanatory variable!]
 
@@ -303,7 +298,6 @@ different treatment to each group
 
 ---
 
-class: middle
 
 # Elimination of confounding variables
 
@@ -412,6 +406,7 @@ anti-depressant medication is due to the .bold[placebo effect]
 
 ---
 
+class: middle
 
 # Can Video Games Help Teens Beat Depression?
 
@@ -500,25 +495,6 @@ class: middle
 
 ]
 
-
-
-
----
-
-class: middle
-
-# More on Randomization
-
-.bql[
-- Doing a randomized experiment on a random sample is ideal,
-but rarely achievable. (why?)
-- If the focus of the study is using a sample to estimate a
-population parameter, you need a random sample but do not
-need a randomized experiment (example: election polling)
-- If the focus of the study is establishing causality, you need a
-randomized experiment and can settle for a non-random
-sample (example: drug testing)
-]
 
 ---
 
