--- a/public/courses/stat120/week2/index.html
+++ b/public/courses/stat120/week2/index.html
@@ -61,7 +61,8 @@
     
   
   <meta name="description" content="Day 3 Slides (pdf/html)
-Day 4 Slides (pdf/html)" />
+Day 4 Slides (pdf/html)
+Day 5 Slides (pdf/html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="https://deepbas.netlify.app/courses/stat120/week2/" />
@@ -306,7 +307,8 @@ Day 4 Slides (pdf/html)" />
   <meta property="og:url" content="https://deepbas.netlify.app/courses/stat120/week2/" />
   <meta property="og:title" content="Week 2 | Deepak Bastola" />
   <meta property="og:description" content="Day 3 Slides (pdf/html)
-Day 4 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 4 Slides (pdf/html)
+Day 5 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="https://deepbas.netlify.app/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -786,6 +788,7 @@ Day 4 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
           <div class="article-style">
             <p>Day 3 Slides (<a href="/stat120/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/Day3.html" target="_blank">html</a>)</p>
 <p>Day 4 Slides (<a href="/stat120/Day4.pdf" target="_blank">pdf</a>/<a href="/stat120/Day4.html" target="_blank">html</a>)</p>
+<p>Day 5 Slides (<a href="/stat120/Day5.pdf" target="_blank">pdf</a>/<a href="/stat120/Day5.html" target="_blank">html</a>)</p>
 <!--
 Day 3 Slides (<a href="/stat120/lecture_notes/Day3.pdf" target="_blank">pdf</a>/<a href="/stat120/lecture_notes/Day3.html" target="_blank">html</a>)
 
